--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,10 @@ body {
   background-color: #0e0e2c;
 }
 
+body.lock {
+  overflow: hidden;
+}
+
 .wrapper {
   min-height: 100%;
   overflow: hidden;
@@ -470,6 +474,20 @@ body {
     -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) 0.59s;
     transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) 0.59s;
   }
+}
+
+.title {
+  -webkit-transform: translate(0%, 120%);
+          transform: translate(0%, 120%);
+  opacity: 0;
+  -webkit-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1) 0.1s;
+  transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1) 0.1s;
+}
+
+.title._animation {
+  -webkit-transform: translate(0, 0);
+          transform: translate(0, 0);
+  opacity: 1;
 }
 
 .about {
@@ -2265,4 +2283,199 @@ body {
 
 .menu2__list > li {
   padding: 10px 0;
+}
+
+.popup {
+  position: fixed;
+  z-index: 20;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
+  -webkit-transition: all 0.6s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+  transition: all 0.6s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+}
+
+.popup.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup.open .popup__content {
+  left: 0;
+  opacity: 1;
+}
+
+.popup__area {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.popup__body {
+  min-height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 30px 10px;
+  -webkit-transition: all 0.8s ease 0s;
+  transition: all 0.8s ease 0s;
+}
+
+.popup__content {
+  position: relative;
+  background-color: #fff;
+  border-radius: 18px;
+  color: #000;
+  max-width: 800px;
+  padding: 30px 40px 30px 30px;
+  position: relative;
+  -webkit-transition: all 0.8s ease 0s;
+  transition: all 0.8s ease 0s;
+  opacity: 0;
+  left: -100%;
+}
+
+@media (max-width: 400.98px) {
+  .popup__content {
+    padding: 20px 20px 20px 17px;
+  }
+}
+
+.popup__close:before, .popup__close:after {
+  content: "";
+  position: absolute;
+  right: 10px;
+  top: 18px;
+  width: 20px;
+  height: 2px;
+  background: #000;
+}
+
+.popup__close:before {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+.popup__close:after {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.popup__title {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 150%;
+  text-align: center;
+  color: #0D0D2B;
+}
+
+.popup__title:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.popup__form:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.popup__email, .popup__password, .popup__name, .popup__tel {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 175%;
+  letter-spacing: 0.01em;
+  padding: 8px 10px;
+  border-radius: 17px;
+  color: #000;
+  border: 1px solid #828282;
+}
+
+.popup__email:not(:last-child), .popup__password:not(:last-child), .popup__name:not(:last-child), .popup__tel:not(:last-child) {
+  margin-bottom: 12px;
+}
+
+.popup__email::-webkit-input-placeholder, .popup__password::-webkit-input-placeholder, .popup__name::-webkit-input-placeholder, .popup__tel::-webkit-input-placeholder {
+  color: #828282;
+}
+
+.popup__email:-ms-input-placeholder, .popup__password:-ms-input-placeholder, .popup__name:-ms-input-placeholder, .popup__tel:-ms-input-placeholder {
+  color: #828282;
+}
+
+.popup__email::-ms-input-placeholder, .popup__password::-ms-input-placeholder, .popup__name::-ms-input-placeholder, .popup__tel::-ms-input-placeholder {
+  color: #828282;
+}
+
+.popup__email::placeholder, .popup__password::placeholder, .popup__name::placeholder, .popup__tel::placeholder {
+  color: #828282;
+}
+
+.popup__text {
+  display: inline-block;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 120%;
+  letter-spacing: 0.01em;
+  color: #000;
+}
+
+.popup__text:not(:last-child) {
+  margin-bottom: 12px;
+}
+
+.popup__text:hover {
+  text-decoration: underline;
+}
+
+.popup__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-column-gap: 20px;
+          column-gap: 20px;
+}
+
+.popup__button {
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.popup__button:hover {
+  background-color: transparent;
+  border: 1px solid #000;
+  color: #000;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.popup__register, .popup__login {
+  font-weight: 600;
+}
+
+.popup__register:hover, .popup__login:hover {
+  background-color: transparent;
+  border: 1px solid #000;
+  color: #000;
 }
