--- a/css/style.css
+++ b/css/style.css
@@ -1290,10 +1290,16 @@ body.lock {
   max-width: 461px;
 }
 
-.do__cards {
+.do__items {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 calc(50%-45px);
           flex: 0 1 calc(50%-45px);
+  position: relative;
+  min-width: 0;
+  max-width: 100%;
+}
+
+.do__cards {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1304,29 +1310,31 @@ body.lock {
           column-gap: 22px;
 }
 
+@media (max-width: 767.98px) {
+  .do__cards {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    row-gap: 0;
+    -webkit-column-gap: 0;
+            column-gap: 0;
+  }
+}
+
 .do__card {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 calc(50% - 11px);
           flex: 0 1 calc(50% - 11px);
   padding: 23px;
   max-width: 272px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
   border-radius: 10px;
   -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
   transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
 }
 
-@media (max-width: 479.98px) {
+@media (max-width: 767.98px) {
   .do__card {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 1 100%;
-            flex: 1 1 100%;
+    max-width: 100%;
+    min-width: 100%;
   }
 }
 
@@ -1353,6 +1361,12 @@ body.lock {
 .do__card:hover > .do__img img {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
+}
+
+@media (max-width: 767.98px) {
+  .do__card:hover {
+    background-color: transparent;
+  }
 }
 
 .do__img {
@@ -1391,6 +1405,49 @@ body.lock {
   font-size: 14px;
   line-height: 180%;
   color: #868695;
+}
+
+.swiper-container {
+  max-width: 1000px;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  padding: 0px;
+  overflow: hidden;
+}
+
+.swiper-container *.swiper-button-next, .swiper-container *.swiper-button-prev {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .swiper-container {
+    padding: 0 50px;
+    max-width: calc(100%);
+  }
+  .swiper-container *.swiper-button-next, .swiper-container *.swiper-button-prev {
+    display: block;
+  }
+}
+
+.swiper-slide {
+  overflow: hidden;
+}
+
+@media (max-width: 767.98px) {
+  .swiper-slide {
+    padding: 20px calc(12vw + 12px);
+  }
+}
+
+.features__swiper .swiper-button-prev::after,
+.features__swiper .swiper-button-next::after {
+  color: #0D0D2B;
+  font-size: 50px;
+}
+
+.swiper-button-prev, .swiper-button-next {
+  padding: 0;
+  z-index: 2;
 }
 
 .product {
